# core

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  Version.h.in  embeddedBuild.cmake  include.mk
Tracealyzer/Include/: trcConfig.h
chip/: chip.h  hal_header.h
cmake/: compilerSetup.cmake  embeddedBuild.cmake  extractBuildinfoFromMakefile.cmake  generateCubeMXTargets.cmake  setupEmbeddedBuild.cmake  setupEmbeddedExtraFiles.cmake
documentation/: MakefileMigrationGuide.md
inc/core/: BuildConfiguration.hpp  BuildConfigurationTypes.h  SafeAssert.h  SpanCompatibility.hpp  build_information.hpp  fault_handler.h  hash.hpp  trace.hpp
mk/: rules.mk
scripts/: checkStaticLibraries.py  generateVersionHeader.py
src/: SafeAssert.cpp  abi.cpp  build_information.cpp  fault_handler.c  fault_handler.cpp  hash.cpp  std.cpp  trace.cpp
templates/: CMakeLists.txt.FirmwareTemplate.cmake  CMakeLists.txt.LibraryTemplate.cmake  c_cpp_properties.json  gitignore  launch.json
